Fix h1 being too edge on mobile devices

--- a/assets/sass/_content.scss
+++ b/assets/sass/_content.scss
@@ -16,7 +16,7 @@
   h1 {
     text-decoration: underline solid $orange;
     text-decoration-thickness: 4px;
-    padding: 1em 0 .5em 0;
+    padding: 1em 0 .5em 16px;
   }
   .main-header {
     font-size: 2.8em;
